# my-dhis2

./: .env.example  .env.swarm.example  .env.sync.example  .gitignore  .output.txt  DHIS2.md  Dockerfile  Dockerfile.sharer  Makefile  Pipfile  README.md  SWARM.md  credentials-demo  docker-compose.local.yml  docker-compose.swarm.yaml  docker-compose.yaml  download_tomcat9.sh  entrypoint.sh  pyproject.toml  start.sh
def/: server.xml
ingress/: Dockerfile  generate-certs.sh  nginx.conf
init/: Dockerfile  entrypoint.sh
notifications/: server.py
poller/: event_poller.py  requirements.txt
secrets/: credentials  dhis2-admin-credentials  dhis2-api-token  dhis2-token  postgres-db  postgres-password
sharer/: sharer-compose.yml
sms_gateway/: requirements.txt  setup_sms_gateway.sh  setup_surveillance.py  sms_gateway.py  sms_messages.json  test_patient.json
src/: Dockerfile  app.py  app.sh
tomcatconf/: web.xml
tomcatconf-http/: server.xml
tomcatconf-https/: server.xml
